--- a/Cap.Web/Areas/Erp/Views/Shared/_Layout.cshtml
+++ b/Cap.Web/Areas/Erp/Views/Shared/_Layout.cshtml
@@ -61,8 +61,10 @@
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Débitos<span class="caret"></span></a>
                             <ul class="dropdown-menu">
-                                <li><a href="/Erp/Pesquisa">Pesquisar agendamentos</a></li>
                                 <li><a href="/Erp/Pedido/Create">Novo agendamento</a></li>
+                                <li><a href="/Erp/Pesquisa">Pesquisar agendamentos</a></li>
+                                <li role="separator" class="divider"></li>
+                                <li><a href="/Erp/Debitos">Relatório de agendamentos futuros</a></li>
                             </ul>
                         </li>
 
