cancelamento de pre liberacao

--- a/Cap.Web/Areas/Erp/Views/Liberacao/Cancelar.cshtml
+++ b/Cap.Web/Areas/Erp/Views/Liberacao/Cancelar.cshtml
@@ -1,18 +1,18 @@
 ﻿
 @{
-    ViewBag.Title = "Pré liberações de pagamentos";
+    ViewBag.Title = "Cancelamento de pré liberações";
 }
 
-<h2>Liberações de pagamentos</h2>
+<h2>Cancelamento de pré liberações</h2>
 
 <div class="container">
-    Parcelas à liberar até dia
+    Parcelas passíveis de pré cancelamento até dia
     <div class="row">
         <div class="col-md-3">
-            <input type="date" value="@ViewBag.Final" id="final" class="form-control col-md-3" />
+            <input type="date" value="@ViewBag.Final" id="final" class="form-control col-md-3"/>
         </div>
         <div class="col-md-9">
-            <input type="button" value="Pesquisar" id="pesquisar" class="btn btn-primary" />
+            <input type="button" value="Pesquisar" id="pesquisar" class="btn btn-primary"/>
         </div>
     </div>
 </div>
@@ -22,17 +22,18 @@
 </div>
 
 <script type="text/javascript">
+
     $(document).ready(function () {
         listarParcelas();
     });
 
     $('#pesquisar').click(function () {
         listarParcelas();
-    })
+    });
 
     function listarParcelas() {
         $.ajax({
-            url: '/Erp/Liberacao/ParcelasALiberar?final=' + $('#final').val(),
+            url: '/Erp/Liberacao/ParcelasACancelar?final=' + $('#final').val(),
             type: 'GET',
             success: function (result) {
                 $('#parcelas').html(result);
