--- a/Cap.Web/Areas/Erp/Views/Shared/_Layout.cshtml
+++ b/Cap.Web/Areas/Erp/Views/Shared/_Layout.cshtml
@@ -65,6 +65,11 @@
                                 <li><a href="/Erp/Pesquisa">Pesquisar agendamentos</a></li>
                                 <li role="separator" class="divider"></li>
                                 <li><a href="/Erp/Debitos">Relatório de agendamentos futuros</a></li>
+                                <li role="separator" class="divider"></li>
+                                <li><a href="/Erp/Liberacao">Pré liberação de pagamentos</a></li>
+                                <li><a href="/Erp/Liberacao/Cancelar">Cancelar pré liberação</a></li>
+                                <li><a role="separator" class="divider"></a></li>
+                                <li><a href="/Erp/LiberacaoPagamento">Liberação para pagamento</a></li>
                             </ul>
                         </li>
 
