--- a/Cap.Web/Areas/Erp/Views/Pedido/Edit.cshtml
+++ b/Cap.Web/Areas/Erp/Views/Pedido/Edit.cshtml
@@ -75,11 +75,16 @@
             <div class="row">
                 <div class="col-md-12 top20">
                     <input type="submit" value="Gravar" class="btn btn-primary" />
+                    <input type="button" value="Excluir" class="btn btn-danger" id="excped" data-id="@Model.Id" />
                 </div>
             </div>
         </div>
     </div>
 }
+
+<div id="modal" class="modal">
+
+</div>
 
 <div id="parcelas" class="container">
     <div class="row">
@@ -90,3 +95,14 @@
         </div>
     </div>
 </div>
+
+<script type="text/javascript">
+
+    $('#excped').click(function () {
+        var id = $(this).attr('data-id');
+        $('#modal').load('/Erp/Pedido/Delete/' + id, function () {
+            $('#modal').modal('show');
+        });
+    });
+
+</script>
