--- a/Cap.Web/Areas/Erp/Views/Parcela/Create.cshtml
+++ b/Cap.Web/Areas/Erp/Views/Parcela/Create.cshtml
@@ -46,7 +46,7 @@
                     <div class="form-group">
                         @Html.LabelFor(model => model.Vencto, htmlAttributes: new { @class = "control-label col-md-2" })
                         <div class="col-md-10">
-                            @Html.EditorFor(model => model.Vencto, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.EditorFor(model => model.Vencto, new { htmlAttributes = new { @class = "form-control datepicker" } })
                             @Html.ValidationMessageFor(model => model.Vencto, "", new { @class = "text-danger" })
                         </div>
                     </div>
