--- a/Cap.Web/Areas/Erp/Views/Pedido/Create.cshtml
+++ b/Cap.Web/Areas/Erp/Views/Pedido/Create.cshtml
@@ -64,7 +64,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.DataNF, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.DataNF, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.DataNF, new { htmlAttributes = new { @class = "form-control datepicker" } })
                 @Html.ValidationMessageFor(model => model.DataNF, "", new { @class = "text-danger" })
             </div>
         </div>
