--- a/Cap.Web/Areas/Erp/Views/Pedido/Edit.cshtml
+++ b/Cap.Web/Areas/Erp/Views/Pedido/Edit.cshtml
@@ -57,7 +57,7 @@
                 </div>
                 <div class="col-md-3">
                     @Html.LabelFor(model => model.DataNF, htmlAttributes: new { @class = "control-label" })
-                    @Html.EditorFor(model => model.DataNF, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.EditorFor(model => model.DataNF, new { htmlAttributes = new { @class = "form-control datepicker" } })
                     @Html.ValidationMessageFor(model => model.DataNF, "", new { @class = "text-danger" })
                 </div>
                 <div class="col-md-3">
