--- a/Cap.Web/Areas/Erp/Views/Socio/Create.cshtml
+++ b/Cap.Web/Areas/Erp/Views/Socio/Create.cshtml
@@ -92,7 +92,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Nascimento, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Nascimento, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.Nascimento, new { htmlAttributes = new { @class = "form-control datepicker" } })
                 @Html.ValidationMessageFor(model => model.Nascimento, "", new { @class = "text-danger" })
             </div>
         </div>
