--- a/Cap.Web/Areas/Erp/Views/Shared/_Layout.cshtml
+++ b/Cap.Web/Areas/Erp/Views/Shared/_Layout.cshtml
@@ -80,7 +80,7 @@
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Configurações<span class="caret"></span></a>
                             <ul class="dropdown-menu">
-                                <li><a href="/Erp/Grupo">Parâmetros do sistema</a></li>
+                                <li><a href="/Erp/Configuracoes">Configurações do sistema</a></li>
                                 <li><a href="/Erp/SistemaArea">Áreas do sistema</a></li>
                                 <li><a href="/Erp/SistemaRegra">Regras do sistema</a></li>
                                 <li><a href="/Erp/SistemaTela">Telas do sistema</a></li>
