configuracoes do sistema

--- a/Cap.Web/Areas/Erp/Views/Configuracoes/Index.cshtml
+++ b/Cap.Web/Areas/Erp/Views/Configuracoes/Index.cshtml
@@ -15,7 +15,7 @@
             </h4>
         </div>
         <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
-            <div class="panel-body">
+            <div class="panel-body" id="emailconfig">
                 @{  Html.RenderAction("Index", "EmailConfig"); }
             </div>
         </div>
