--- a/Cap.Web/Areas/Erp/Views/EmailConfig/Index.cshtml
+++ b/Cap.Web/Areas/Erp/Views/EmailConfig/Index.cshtml
@@ -1,11 +1,16 @@
 ﻿@model Cap.Domain.Models.Email.EmailConfig
 
+@if (TempData["Message"] != null)
+{
+    <div id="emailConfigAlert" class="alert alert-info">
+        @TempData["Message"].ToString()
+    </div>
+}
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
-        <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.Id)
         @Html.HiddenFor(model => model.IdEmpresa)
@@ -36,10 +41,10 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.SenderSmtp, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.ServerSmtp, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.SenderSmtp, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.SenderSmtp, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.ServerSmtp, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.ServerSmtp, "", new { @class = "text-danger" })
             </div>
         </div>
 
@@ -65,8 +70,31 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="button" value="Gravar" class="btn btn-default" />
+                <input type="button" id="savemail" value="Gravar" class="btn btn-primary" />
             </div>
         </div>
     </div>
 }
+
+<script src="~/scripts/jquery-1.10.2.min.js"></script>
+<script type="text/javascript">
+
+    $("#savemail").click(function () {
+        $('emailConfigAlert').removeClass();
+        $.ajax({
+            url: '/Erp/EmailConfig/Index',
+            type: 'POST',
+            data: $(this).closest('form').serialize(),
+            datatype: 'json',
+            success: function (result) {
+                $('#emailconfig').html(result);
+                $('emailConfigAlert').addClass('alert alert-info');
+            },
+            error: function (data) {
+                $('#emailconfig').html(data);
+                $('emailConfigAlert').addClass('alert alert-danger');
+            }
+        });
+    });
+
+</script>
