--- a/Cap.Web/Areas/Erp/Views/LiberacaoPagamento/Index.cshtml
+++ b/Cap.Web/Areas/Erp/Views/LiberacaoPagamento/Index.cshtml
@@ -9,7 +9,7 @@
     Parcelas à liberar até dia
     <div class="row">
         <div class="col-md-3">
-            <input type="date" value="@ViewBag.Final" id="final" class="form-control col-md-3 datepicker" />
+            <input type="date" value="@ViewBag.Final" id="final" class="form-control col-md-3 datepicker" autofocus />
         </div>
         <div class="col-md-9">
             <input type="button" value="Pesquisar" id="pesquisar" class="btn btn-primary" />
