--- a/Cap.Web/Areas/Erp/Views/Material/Index.cshtml
+++ b/Cap.Web/Areas/Erp/Views/Material/Index.cshtml
@@ -11,7 +11,7 @@
     <p>
         Descrição do material:
         @Html.TextBox("pesquisa", (string)ViewBag.Pesquisa)
-        <input type="button" value="Pesquisar" id="pesquisar" name="pesquisar" class="btn btn-primary" />
+        <input type="button" value="Pesquisar" id="pesquisar" name="pesquisar" class="btn btn-primary" autofocus />
     </p>
 }
 
