--- a/Cap.Web/Areas/Erp/Views/Shared/_Layout.cshtml
+++ b/Cap.Web/Areas/Erp/Views/Shared/_Layout.cshtml
@@ -99,7 +99,6 @@
                                 <li><a href="/Erp/SistemaArea">Áreas do sistema</a></li>
                                 <li><a href="/Erp/SistemaRegra">Regras do sistema</a></li>
                                 <li><a href="/Erp/SistemaTela">Telas do sistema</a></li>
-                                <li><a href="/Erp/Email">Configurações para envio de email</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -112,7 +111,7 @@
                                 <span class="caret"></span>
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a href="/Erp/Usuario/TrocaSenha">Trocar senha</a></li>
+                                <li><a href="/Erp/Usuario/TrocarSenha">Trocar senha</a></li>
                             </ul>
                         </li>
                         <li>
