--- a/Cap.Web/Areas/Erp/Views/CentroCusto/Create.cshtml
+++ b/Cap.Web/Areas/Erp/Views/CentroCusto/Create.cshtml
@@ -20,7 +20,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.IdGrupoCusto, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DisplayFor(model => model.GrupoCusto.Descricao, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.DisplayFor(model => model.GrupoCusto.Descricao, new { htmlAttributes = new { @class = "form-control", @autofocus = "autofocus" } })
             </div>
         </div>
 
