--- a/Cap.Web/Areas/Erp/Views/Email/Edit.cshtml
+++ b/Cap.Web/Areas/Erp/Views/Email/Edit.cshtml
@@ -21,7 +21,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control", @autofocus = "autofocus" } })
                 @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
             </div>
         </div>
