--- a/Cap.Web/Areas/Erp/Views/EmailConfig/Index.cshtml
+++ b/Cap.Web/Areas/Erp/Views/EmailConfig/Index.cshtml
@@ -19,7 +19,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Sender, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Sender, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.Sender, new { htmlAttributes = new { @class = "form-control", @autofocus = "autofocus" } })
                 @Html.ValidationMessageFor(model => model.Sender, "", new { @class = "text-danger" })
             </div>
         </div>
