--- a/Cap.Web/Areas/Erp/Views/Parcela/Create.cshtml
+++ b/Cap.Web/Areas/Erp/Views/Parcela/Create.cshtml
@@ -44,6 +44,13 @@
                     </div>
 
                     <div class="form-group">
+                        @Html.LabelFor(model => model.Periodicidade, htmlAttributes: new { @class = "control-label col-md-2" })
+                        <div class="col-md-10">
+                            @Html.SelectPeriodicidade(Model.Periodicidade)
+                        </div>
+                    </div>
+
+                    <div class="form-group">
                         @Html.LabelFor(model => model.Vencto, htmlAttributes: new { @class = "control-label col-md-2" })
                         <div class="col-md-10">
                             @Html.EditorFor(model => model.Vencto, new { htmlAttributes = new { @class = "form-control datepicker" } })
