--- a/Cap.Web/Areas/Erp/Views/SistemaTela/Edit.cshtml
+++ b/Cap.Web/Areas/Erp/Views/SistemaTela/Edit.cshtml
@@ -21,7 +21,7 @@
                     <div class="form-group">
                         @Html.LabelFor(model => model.TextoMenu, htmlAttributes: new { @class = "control-label col-md-2" })
                         <div class="col-md-10">
-                            @Html.EditorFor(model => model.TextoMenu, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.EditorFor(model => model.TextoMenu, new { htmlAttributes = new { @class = "form-control", @autofocus = "autofocus" } })
                             @Html.ValidationMessageFor(model => model.TextoMenu, "", new { @class = "text-danger" })
                         </div>
                     </div>
